--- a/Movie/index.html
+++ b/Movie/index.html
@@ -118,7 +118,7 @@
         const mockMovies = [  "The Shawshank Redemption", "The Godfather", "The Dark Knight", "The Godfather Part II",
   "12 Angry Men", "Schindler's List", "The Lord of the Rings: The Return of the King",
   "Pulp Fiction", "The Good, the Bad and the Ugly", "Fight Club",
-  "Forrest Gump", "Inception", "The Matrix", "Goodfellas", "Se7en",
+  "Forrest Gump", "Inception", "The Matrix", "Goodfellas", "Seven",
   "The Silence of the Lambs", "City of God", "It's a Wonderful Life", "Saving Private Ryan",
   "Interstellar", "The Green Mile", "Léon: The Professional", "The Usual Suspects",
   "The Lion King", "Spirited Away", "The Pianist", "Terminator 2: Judgment Day",
